# Uloha

./: CMakeLists.txt  Main.qml  MainMenu.qml  Palette.qml  README.md  images.qrc  main.cpp
data/: taskRepository.cpp  taskRepository.h
domain/: task.h
qml/: AboutPage.qml  Main.qml  NewTaskPage.qml  Palette.qml  SettingsPage.qml  TasksPage.qml
qml/components/: MainMenu.qml  MenuIconLive.qml  MyPage.qml
ui/: taskListModel.cpp  taskListModel.h
viewModel/: taskFilterProxyModel.cpp  taskFilterProxyModel.h  taskListViewModel.cpp  taskListViewModel.h
